infra/product-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  labels:
    app: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product-service
          image: officialrashid/product-service 
          ports:
            - containerPort: 4001
          
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 4000
      targetPort: 4001
