infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    networking.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: micro.live
      http:
        paths:
          - path: /api/v1/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - path: /api/v1/product/?(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 4000
          - path: /api/v1/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 6000
          - path: /rabbitmq  # Set the desired path for accessing RabbitMQ
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 5672
